--- a/css/test.html
+++ b/css/test.html
@@ -6,28 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        h1,
-        h2,
-        h3 {
-            height: 200px;
-            width: 200px;
-            border: solid;
-            display: inline-block;
-            font-size: 16px;
-        }
     </style>
 </head>
 
 <body>
-    <h1></h1>
-    <h2></h2>
-    <h3></h3>
+    <h1 class="test" id="title">hello</h1>
 </body>
 
 </html>
