--- a/css/test.html
+++ b/css/test.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
+        span {
+            margin: 0px auto;
+            border: solid;
+            /* text-align: center; */
+        }
     </style>
 </head>
 
 <body>
-    <h1 class="test" id="title">hello</h1>
+    <span>hello</span>
 </body>
 
 </html>
