--- a/css/018_flexbox.html
+++ b/css/018_flexbox.html
@@ -16,9 +16,9 @@
             background-color: gray;
             display: flex;
 
-            /* justify-content: center; */
+            justify-content: center;
             /* justify-content: flex-end; */
-            justify-content: space-between;
+            /* justify-content: space-between; */
             /* justify-content: space-around; */
             /* justify-content: space-evenly; */
 
@@ -28,7 +28,7 @@
             /*            👇 Default */
             /* align-items: stretch; */
             /* align-items: flex-start; */
-            /* align-items: center; */
+            align-items: center;
             /* align-items: flex-end; */
 
             /* gap: 50px; */
@@ -41,7 +41,7 @@
         .child1 {
             background-color: red;
             /* flex: 3; */
-            /* align-self: center; */
+            /* align-self: flex-start; */
 
         }
 
@@ -57,10 +57,8 @@
 
     <div class="main">
         <div class="child1">child1</div>
-        <div>
-            <div class="child2">child2</div>
-            <div class="child1">child3</div>
-        </div>
+        <div class="child2">child2</div>
+
     </div>
 </body>
 
