--- a/css/027_login.html
+++ b/css/027_login.html
@@ -10,58 +10,138 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: sans-serif;
         }
 
+        .dummy {
+            height: 300px;
+            background-color: rgb(77, 34, 114);
+        }
+
+
+
         .card {
-            /* height: 300px; */
+            border: 2px solid rgb(77, 34, 114);
             width: 600px;
-            border: solid purple;
-            margin: -200px auto 0px;
+            margin: -200px auto 0;
+            border-bottom-left-radius: 0.5rem;
+            border-bottom-right-radius: 0.5rem;
+
+        }
+
+        .card-header {
+            background-image: url(./assets/images/background.svg);
+            height: 200px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
+
+        .card-header>h1 {
+            font-size: 3rem;
+        }
+
+        .card-header>p {
+            color: gainsboro;
         }
 
         .card-body {
             padding: 2rem;
         }
 
-        .card-header {
-            height: 200px;
-            background-color: red;
+        .input-group {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
+            /* background-color: red; */
         }
 
-        input {
-            display: block;
-            width: 100%;
-            margin: 1rem 0;
+        .input-group>span {
+            background-color: rgb(77, 34, 114);
+            color: white;
             padding: 1rem;
+            border-top-left-radius: 0.5rem;
+            border-bottom-left-radius: 0.5rem;
+        }
+
+        .input-group>input {
+            flex: 1;
+            background-color: rgb(208, 177, 235);
+            border: none;
+            border-top-right-radius: 0.5rem;
+            border-bottom-right-radius: 0.5rem;
+            transition: all 300ms;
+        }
+
+        .input-group>input:hover {
+            transform: scale(1.05);
+        }
+
+        .input-group>input::placeholder {
+            color: rgb(77, 34, 114);
+            padding-left: 10px;
+        }
+
+        .input-group+p {
+            margin: 1rem 0;
+            color: gray;
         }
 
         button {
-            width: 100%;
+            background-color: rgb(77, 34, 114);
+            color: white;
             padding: 1rem;
+            width: 100%;
+            font-size: 1.2rem;
+            border-radius: 0.5rem;
+            transition: all 300ms;
+        }
+
+        button:hover {
+            background-color: rgb(57, 24, 86);
+            transform: scale(1.025);
+        }
+
+        a {
+            text-decoration: none;
+            display: block;
+            text-align: center;
+            margin: 1rem 0;
+            /* background-color: red; */
         }
     </style>
+
 </head>
 
 <body>
-    <div style="background-color: purple; height: 200px;"></div>
+    <div class="dummy"></div>
     <div class="card">
         <div class="card-header">
             <h1>Secure Login</h1>
             <p>Powered by SKILLHUB</p>
         </div>
         <div class="card-body">
-            <input type="text" placeholder="Enter name" name="" id="">
-            <input type="text" placeholder="Enter password" name="" id="">
-            <input type="text" placeholder="Enter pin" name="" id="">
+            <div class="input-group">
+                <span>username</span>
+                <input type="text" placeholder="Registered Email / Mobile Number">
+            </div>
+            <p>You can use your registered email or mobile number</p>
+            <div class="input-group">
+                <span>username</span>
+                <input type="text" placeholder="Registered Email / Mobile Number">
+            </div>
+            <p>You can use your registered email or mobile number</p>
+            <div class="input-group">
+                <span>username</span>
+                <input type="text" placeholder="Registered Email / Mobile Number">
+            </div>
+            <p>You can use your registered email or mobile number</p>
             <button>Login</button>
+            <a href="">Trouble Login?</a>
         </div>
     </div>
-
 </body>
 
 </html>
