--- a/css/test.html
+++ b/css/test.html
@@ -5,13 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .card {
+            width: 400px;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            border: 5px dashed;
+            padding: 2rem;
+            transition: all 0.3s;
+        }
+
+        .card:hover {
+            transform: scale(1.5);
+        }
+
+        .card>img {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 
 <body>
 
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
+    <div class="card">
+        <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="">
+        <div>
+            <h1>Kate Doe</h1>
+            <p>Front End Developer</p>
+        </div>
+    </div>
 </body>
 
 </html>
