--- a/bootstrap/test.html
+++ b/bootstrap/test.html
@@ -9,15 +9,19 @@
 </head>
 
 <body>
-
     <div class="container">
-        <!-- <input type="submit" data-bs-toggle="collapse" data-bs-target="#test"> -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#test">Open</button>
-        <div class="collapse" id="test">
-            <div class="alert alert-primary ">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque labore, eum ea ratione veniam temporibus
-                impedit! Maiores cumque nesciunt iure, libero laudantium ad enim odio quia eius, voluptate quos
-                consequuntur.
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-12">
+                <div class="alert alert-danger">danger</div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-6">
+                <div class="alert alert-success">success</div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-6">
+                <div class="alert alert-info">info</div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="alert alert-warning">warning</div>
             </div>
         </div>
     </div>
