--- a/javascript/test.html
+++ b/javascript/test.html
@@ -1,16 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap By SKILLHUB</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // var y
+        //     let z
+        console.log(y)
+        var y = 20
+
+        // Temporal Dead Zone (TDZ) : area where variable are inaccessible
+        // console.log(z)
+        let z = 10
+
+        console.clear()
+
+        var a = 10
+        a = 20
+
+        let b = 20
+        b = 30
+
+        const c = 20
+        c = 30
+
+    </script>
 </body>
 
 </html>
