--- a/javascript/06_let_const_var.html
+++ b/javascript/06_let_const_var.html
@@ -12,11 +12,13 @@
 
     <script>
         /*
-                                        VAR         LET         CONST
-                REDELCARATION           YES         NO            NO
-                REINITIALIZATION        YES         YES           NO
-                TDZ                     NO          YES          YES
-                SCOPE                FUNCATIONAL    BLOCK       BLOCK
+                                                   VAR         LET         CONST
+                REDELCARATION                      YES         NO            NO
+                REINITIALIZATION                   YES         YES           NO
+                TDZ                                NO          YES          YES
+                SCOPE                           FUNCATIONAL    BLOCK       BLOCK
+                MANDATORY INITIALIZE                NO          NO          YES
+
         */
 
 
