--- a/javascript/024_array.html
+++ b/javascript/024_array.html
@@ -22,6 +22,15 @@
         students[4] = "dell"
         console.log(students)
 
+        /*
+            push
+            pop
+            shift
+            unshift
+            slice
+            splice
+        */
+
     </script>
 </body>
 
