--- a/javascript/test.html
+++ b/javascript/test.html
@@ -8,31 +8,15 @@
 </head>
 
 <body>
-
     <script>
-        /*                      var         let         const
-        
-            redercl.            yes         no          no
-            reinit.             yes         yes         no
-            tdz                 no          yes         no
-            scope               fun.        block       block
-            mand. initlize      no          no          yes
-        */
+        const brands = ["dell", "hp", "apple", "msi", "gigabyte"]
+        // brands.shift()
+        // brands.splice(2, 1, "lenovo")
+        // brands.pop()
 
-        /*
-            let 1num = 10
-            let first name = "john"
-        
-        */
-        let x = 10
-        if (x > 50) {
-            console.log("hi")
-        } else {
-            console.log("bye")
-        }
+        console.log(brands)
 
     </script>
-
 </body>
 
 </html>
