--- a/javascript/test.html
+++ b/javascript/test.html
@@ -9,23 +9,12 @@
 
 <body>
     <script>
-        let x = 10, y = 20, z
-
-        console.log(x, y)
-        // z = x
-        // x = y
-        // y = z
-
-        // x = x + y // x = 30
-        // y = x - y // y = 10
-        // x = x - y // x = 20
-
-        const arr = [x, y]
-        x = arr[1]
-        y = arr[0]
-        console.log(x, y)
-        // swap
-        // x = 20 , y = 10
+        // const arr = [10]
+        // arr.push(60)
+        // console.warn(arr)
+        const s1 = { name: "ross" } // address 123
+        s1.age = 25 // ok
+        // s1 = {} // error 
 
     </script>
 </body>
