--- a/javascript/test.html
+++ b/javascript/test.html
@@ -8,18 +8,13 @@
 </head>
 
 <body>
-
     <script>
-        function test(arg) {
-            return 10
-        }
-        function demo(arg) {
-            return arg() + arg()
-            return 10 + 10
-        }
-        const result = demo(test)
-
+        const arr = ["dell", "hp", "apple"]
+        // arr.splice(1, 1)
+        // arr.splice(0, 1)
+        arr.splice(2, 1)
     </script>
+
 </body>
 
 </html>
