--- a/javascript/test.html
+++ b/javascript/test.html
@@ -8,33 +8,21 @@
 </head>
 
 <body>
-    <input type="text" id="inp1">
-    <input type="text" id="inp2">
-    <button onclick="handleSubmit()">click me</button>
-
-    <div id="root"></div>
+    <button onclick="test()">click me</button>
     <script>
-        const arr = [
-            { fname: "john", lname: "doe" },
-            { fname: "ross", lname: "galler" },
-            { fname: "rachel", lname: "green" },
-        ]
-        const input1 = document.getElementById("inp1")
-        const input2 = document.getElementById("inp2")
-        const output = document.getElementById("root")
-        let index = 0
-        for (const item of arr) {
-            output.innerText += `<div>${item.fname} ${item.lname} <button onclick="handleEdit(${index})">edit</button>  </div>`
-            index++
+        let x = true
+        function test() {
+            // toggle
+            if (x) {
+                console.log("hi")
+                x = false
+            } else {
+                console.log("bye")
+                x = true
+            }
         }
 
-        function handleSubmit() { }
-        function handleEdit(i) {
-            input1.value = arr[i].fname
-            input2.value = arr[i].lname
-        }
     </script>
-
 </body>
 
 </html>
