--- a/javascript/046_XNO.html
+++ b/javascript/046_XNO.html
@@ -92,36 +92,32 @@
                     chance = true
                 }
             }
-            isWinner()
+            // isWinner()
+            checkDraw()
 
         }
 
         function isWinner() {
 
-            checkWinner("box-1", "box-2", "box-3", "bg-danger")
-            checkWinner("box-1", "box-2", "box-3", "bg-primary")
+            return (
+                checkWinner("box-1", "box-2", "box-3", "bg-danger")
+                || checkWinner("box-1", "box-2", "box-3", "bg-primary")
+                || checkWinner("box-1", "box-4", "box-7", "bg-danger")
+                || checkWinner("box-1", "box-4", "box-7", "bg-primary")
+                || checkWinner("box-2", "box-5", "box-8", "bg-danger")
+                || checkWinner("box-2", "box-5", "box-8", "bg-primary")
+                || checkWinner("box-3", "box-6", "box-9", "bg-danger")
+                || checkWinner("box-3", "box-6", "box-9", "bg-primary")
+                || checkWinner("box-4", "box-5", "box-6", "bg-danger")
+                || checkWinner("box-4", "box-5", "box-6", "bg-primary")
+                || checkWinner("box-7", "box-8", "box-9", "bg-danger")
+                || checkWinner("box-7", "box-8", "box-9", "bg-primary")
+                || checkWinner("box-1", "box-5", "box-9", "bg-danger")
+                || checkWinner("box-1", "box-5", "box-9", "bg-primary")
+                || checkWinner("box-3", "box-5", "box-7", "bg-danger")
+                || checkWinner("box-3", "box-5", "box-7", "bg-primary")
 
-            checkWinner("box-1", "box-4", "box-7", "bg-danger")
-            checkWinner("box-1", "box-4", "box-7", "bg-primary")
-
-            checkWinner("box-2", "box-5", "box-8", "bg-danger")
-            checkWinner("box-2", "box-5", "box-8", "bg-primary")
-
-            checkWinner("box-3", "box-6", "box-9", "bg-danger")
-            checkWinner("box-3", "box-6", "box-9", "bg-primary")
-
-            checkWinner("box-4", "box-5", "box-6", "bg-danger")
-            checkWinner("box-4", "box-5", "box-6", "bg-primary")
-
-            checkWinner("box-7", "box-8", "box-9", "bg-danger")
-            checkWinner("box-7", "box-8", "box-9", "bg-primary")
-
-            checkWinner("box-1", "box-5", "box-9", "bg-danger")
-            checkWinner("box-1", "box-5", "box-9", "bg-primary")
-
-            checkWinner("box-3", "box-5", "box-7", "bg-danger")
-            checkWinner("box-3", "box-5", "box-7", "bg-primary")
-
+            )
 
 
 
@@ -143,6 +139,7 @@
             const box3 = document.getElementById(id3).classList.contains(color)
             if (box1 && box2 && box3) {
                 if (color === 'bg-danger') {
+
                     p1WinCount.innerHTML = ++player1WinCount
                 } else {
                     p2WinCount.innerHTML = ++player2WinCount
@@ -157,13 +154,37 @@
                     result.innerHTML = ""
                 }, 5000)
                 setTimeout(resetGame, 2000)
+                return true
+            } else {
+                return false
             }
-
         }
 
+        function checkDraw() {
+            const filledArray = []
+            for (let i = 1; i <= 9; i++) {
+                const isRed = document.getElementById(`box-${i}`).classList.contains("bg-danger")
+                const isBlue = document.getElementById(`box-${i}`).classList.contains("bg-primary")
+                if (isRed || isBlue) {
+                    filledArray.push("hellllo")
+                }
+            }
+            // console.log(!isWinner())
+            if (!isWinner() && filledArray.length === 9) {
+                // console.log("Draw")
+                tCount.innerHTML = ++total
+                dCount.innerHTML = ++drawCount
+
+                setTimeout(() => {
+                    resetGame()
+                }, 2000);
+            }
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
+<!-- ES6 -->
