--- a/javascript/test.html
+++ b/javascript/test.html
@@ -1,28 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap By SKILLHUB</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <div class="container">
+        <div id="playerForm">
+            <input id="p1" type="text" placeholder="Enter Player 1 name">
+            <input id="p2" type="text" placeholder="Enter Player 2 name">
+            <button onclick="startGame()">Play Game</button>
+        </div>
+
+        <div class="vh-100 vw-100 position-absolute top-0  d-none" id="backdrop"></div>
+        <div class="container d-none" id="game">
+            <div class="row">
+                <div class="col-sm-6 offset-sm-3">
+                    <div id="result"></div>
+                    <div>
+                        <div><span id="p1Name">John</span> <strong id="p1WinCount">0</strong> </div>
+                        <div><span id="p2Name">kate</span> <strong id="p2WinCount">0</strong> </div>
+                        <div>draw <strong id="drawCount">0</strong> </div>
+                        <div>total <strong id="total">0</strong> </div>
+                    </div>
+
+                    <div class="parent">
+                        <div onclick="playGame('box-1')" class="box" id="box-1"></div>
+                        <div onclick="playGame('box-2')" class="box" id="box-2"></div>
+                        <div onclick="playGame('box-3')" class="box" id="box-3"></div>
+                        <div onclick="playGame('box-4')" class="box" id="box-4"></div>
+                        <div onclick="playGame('box-5')" class="box" id="box-5"></div>
+                        <div onclick="playGame('box-6')" class="box" id="box-6"></div>
+                        <div onclick="playGame('box-7')" class="box" id="box-7"></div>
+                        <div onclick="playGame('box-8')" class="box" id="box-8"></div>
+                        <div onclick="playGame('box-9')" class="box" id="box-9"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+
+            let chance = true, player1WinCount = 0, player2WinCount = 0, drawCount = 0, total = 0
+            const playerForm = document.querySelector("#playerForm")
+            const game = document.querySelector("#game")
+            const player1 = document.querySelector("#p1")
+            const player2 = document.querySelector("#p2")
+            const p1WinCount = document.querySelector("#p1WinCount")
+            const p2WinCount = document.querySelector("#p2WinCount")
+            const dCount = document.querySelector("#drawCount")
+            const tCount = document.querySelector("#total")
+
+            const result = document.getElementById("result")
+            const backdrop = document.getElementById("backdrop")
+
+            function startGame() {
+                playerForm.classList.add("d-none")
+                game.classList.remove("d-none")
+
+                document.querySelector("#p1Name").innerHTML = player1.value
+                document.querySelector("#p2Name").innerHTML = player2.value
+            }
+
+            function playGame(id) {
+                const selectedBox = document.getElementById(id)
+                if (!selectedBox.classList.contains("bg-danger") && !selectedBox.classList.contains("bg-primary")) {
+                    if (chance) {
+                        selectedBox.innerHTML = `<h1>X</h1>`
+                        selectedBox.classList.add("bg-danger")
+                        chance = false
+                    } else {
+                        selectedBox.innerHTML = `<h1>O</h1>`
+                        selectedBox.classList.add("bg-primary")
+                        chance = true
+                    }
+                }
+                // isWinner()
+                checkDraw()
+
+            }
+
+            function isWinner() {
+                const isBox1Red = document.getElementById("box-1").classList.contains("bg-danger")
+                const isBox2Red = document.getElementById("box-2").classList.contains("bg-danger")
+                const isBox3Red = document.getElementById("box-3").classList.contains("bg-danger")
+                if (isBox1Red && isBox2Red && isBox3Red) {
+                    console.log("Red Box Winner")
+                    resetGame()
+                }
+
+                checkWinner("box-1", "box-2", "box-3", "bg-danger")
+                checkWinner("box-1", "box-2", "box-3", "bg-primary")
+
+                checkWinner("box-1", "box-4", "box-7", "bg-danger")
+                checkWinner("box-1", "box-4", "box-7", "bg-primary")
+
+                checkWinner("box-2", "box-5", "box-8", "bg-danger")
+                checkWinner("box-2", "box-5", "box-8", "bg-primary")
+
+                checkWinner("box-3", "box-6", "box-9", "bg-danger")
+                checkWinner("box-3", "box-6", "box-9", "bg-primary")
+
+                checkWinner("box-4", "box-5", "box-6", "bg-danger")
+                checkWinner("box-4", "box-5", "box-6", "bg-primary")
+
+                checkWinner("box-7", "box-8", "box-9", "bg-danger")
+                checkWinner("box-7", "box-8", "box-9", "bg-primary")
+
+                checkWinner("box-1", "box-5", "box-9", "bg-danger")
+                checkWinner("box-1", "box-5", "box-9", "bg-primary")
+
+                checkWinner("box-3", "box-5", "box-7", "bg-danger")
+                checkWinner("box-3", "box-5", "box-7", "bg-primary")
 
 
-    <script>
-        function test(p1, p2) {
-            p1 = p2
-            p2 = p1
-            return p1 + p2
-        }
-        // demo => higher order function
-        //             👇 callback
-        function demo(arg) {
 
-        }
-        const x = demo(test)
-    </script>
+
+            }
+
+            function resetGame() {
+                document.getElementById("box-1").classList.remove("bg-danger")
+                document.getElementById("box-1").innerHTML = ""
+                for (let i = 1; i <= 9; i++) {
+                    document.getElementById(`box-${i}`).classList.remove("bg-danger")
+                    document.getElementById(`box-${i}`).classList.remove("bg-primary")
+                    document.getElementById(`box-${i}`).innerHTML = ""
+                }
+                chance = true
+                backdrop.classList.add("d-none")
+            }
+
+            function checkWinner(id1, id2, id3, color) {
+                const box1 = document.getElementById(id1).classList.contains(color)
+                const box2 = document.getElementById(id2).classList.contains(color)
+                const box3 = document.getElementById(id3).classList.contains(color)
+                if (box1 && box2 && box3) {
+                    if (color === 'bg-danger') {
+                        p1WinCount.innerHTML = ++player1WinCount
+                    } else {
+                        p2WinCount.innerHTML = ++player2WinCount
+                    }
+
+                    tCount.innerHTML = ++total
+
+                    result.innerHTML = `<div class="alert alert-success">${color === "bg-danger" ? "Red" : "Blue"} Box Winner</div>`
+                    backdrop.classList.remove("d-none")
+
+                    setTimeout(() => {
+                        result.innerHTML = ""
+                    }, 5000)
+                    setTimeout(resetGame, 2000)
+                    return true
+                } else {
+                    return false
+                }
+
+            }
+
+            function checkDraw() {
+                const filledArray = []
+                for (let i = 1; i <= 9; i++) {
+                    const isRed = document.getElementById(`bpx-${i}`).classList.contains("bg-danger")
+                    const isBlue = document.getElementById(`bpx-${i}`).classList.contains("bg-primary")
+                    if (isRed || isBlue) {
+                        filledArray.push("hello")
+                    }
+                }
+                if (!isWinner() && filledArray.length === 9) {
+                    console.log("Draw");
+                }
+                // console.log(filledArray.length === 9 ? "all filled " : "not filled");
+            } 
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
