--- a/javascript/test.html
+++ b/javascript/test.html
@@ -8,7 +8,18 @@
 </head>
 
 <body>
+    <script>
+        //               👇 callback
+        const getData = (arg) => {
+            return arg()
+        }
+        const test = () => {
+            return "hp"
+        }
+        const x = getData(test)
+        console.log(x)
 
+    </script>
 </body>
 
 </html>
