--- a/javascript/061_weather.html
+++ b/javascript/061_weather.html
@@ -19,13 +19,16 @@
                 const API_KEY = "3dea525bd734a6c4f89ab2fb9e025109"
                 const URL = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${API_KEY}`
                 const data = await fetch(URL)
-                const { weather, main } = await data.json()
-                document.getElementById("root").innerHTML = `
-                    <h1>${weather[0].main}</h1>
-                    <p>Temp : ${main.temp - 273.15} Celcius</p>
-                    <p>Max Temp : ${main.temp_max - 273.15} Celcius</p>
-                    <p>Min Temp : ${main.temp_min - 273.15} Celcius</p>
-                `
+                const result = await data.json()
+                console.log(result)
+
+                // const { weather, main } = await data.json()
+                // document.getElementById("root").innerHTML = `
+                //     <h1>${weather[0].main}</h1>
+                //     <p>Temp : ${main.temp - 273.15} Celcius</p>
+                //     <p>Max Temp : ${main.temp_max - 273.15} Celcius</p>
+                //     <p>Min Temp : ${main.temp_min - 273.15} Celcius</p>
+                // `
             } catch (error) {
                 console.log(error)
             }
